objects/pse__Project_Variance_Batch_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the settings used by Batch Apex jobs for Project Variance calculations.</description>
    <fields>
        <fullName>pse__Notifications_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Project Variance batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Project Variance batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications by Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, notifications from Project Variance batch processes are sent via email to recipients listed in the Notification Recipients setting. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Project Variance batch processes are sent via email to recipients listed in the Notification Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications by Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Recipients__c</fullName>
        <description>Specifies the notification recipients for Project Variance batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</description>
        <inlineHelpText>Specifies the notification recipients for Project Variance batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</inlineHelpText>
        <label>Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Project Variance batch processes are sent via tasks. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Project Variance batch processes are sent via tasks. This is deselected by default.</inlineHelpText>
        <label>Notifications by Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__ProjectVariance_Batch_Size__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The number of records to process in a single batch. The value is 5 by default.</description>
        <inlineHelpText>The number of records to process in a single batch. The value is 5 by default.</inlineHelpText>
        <label>Project Variance Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Variance Batch Settings</label>
</CustomObject>